# iot-edge-agent

./: CMakeLists.txt  README.md
c-utility/: CMakeLists.txt
c-utility/samples/socketio_connect/: main.c
c-utility/src/: singlylinkedlist.c
iot_edge_agent/: CMakeLists.txt  README.md  a1.json  device_model.json  device_request.json  device_response.json  iot-model.json
iot_edge_agent/inc/: channel_model.h  common_include.h  dlt_698.h  iot_edge_agent.h  iot_main.h  iot_model.h  iotea_client.h  main.h  modbus.h  modbus_rtu.h  protocol_manager.h  serial_io.h  serial_port.h  utils.h
iot_edge_agent/src/: channel_model.c  dlt_698.c  iot_edge_agent.c  iot_main.c  iot_model.c  iotea_client.c  main.c  modbus.c  modbus_rtu.c  protocol_manager.c  serial_io.c  serial_port.c  utils.c
iothub_client/: CMakeLists.txt
iothub_client/samples/iothub_client_sample/: iothub_mqtt_client_sample.c
libdlt698/: CMakeLists.txt
libdlt698/inc/: dlt698_common.h  dlt698_master.h
libdlt698/src/: dlt698_master.c
liblightmodbus/: CMakeLists.txt
liblightmodbus/examples/: example  example.c  makefile
liblightmodbus/include/lightmodbus/: libconf.h
liblightmodbus/src/: master.c
parson/: a.out  app-config.json  config_parse.c  config_parse.h  iot-model.json  testcpp
test/: channel_model.json  dlt_socket_test.py  thing_model.json
